; ModuleID = '/home/carl/AnghaBench/git/extr_server-info.c_update_info_refs.c'
source_filename = "/home/carl/AnghaBench/git/extr_server-info.c_update_info_refs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"info/refs\00", align 1
@generate_info_refs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @update_info_refs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_info_refs(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i8* @git_pathdup(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @generate_info_refs, align 4
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @update_info_file(i8* %6, i32 %7, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @free(i8* %10)
  %12 = load i32, i32* %4, align 4
  ret i32 %12
}

declare dso_local i8* @git_pathdup(i8*) #1

declare dso_local i32 @update_info_file(i8*, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
